做了案例页面，完善了工具库和准备前期工作

--- a/src/scss/core/_var.scss
+++ b/src/scss/core/_var.scss
@@ -11,6 +11,8 @@
     --1: #111;
     --6: #666;
     --9: #999;
+    --d: #ddd;
+    --f6: #f6f6f6;
     --bc: #154a93;
     --bl: #eaf3ff;
     --ac: #e27c11;
