--- a/src/scss/common/_common.scss
+++ b/src/scss/common/_common.scss
@@ -1,15 +1,64 @@
-@use '_tool.scss';
-@use '_bread.scss';
+@use 'tool';
+@use 'fonts';
 @use 'sass:map';
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: "MiSans-Normal", 'PingFang SC', 'Microsoft YaHei', 'Microsoft YaHei UI', 'SimSun', 'SimHei', 'Arial';
-    font-size: 0.16rem;
-    line-height: 1.4;
-    color: inherit;
+    font-family: "Poppins", 'PingFang SC', 'Microsoft YaHei', 'Microsoft YaHei UI', 'SimSun', 'SimHei', 'Arial';
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    background-color: var(--f, #fff);
+}
+
+::-webkit-scrollbar-thumb {
+    border: solid 1px transparent;
+    width: 3px;
+    border-radius: 4px;
+    background-color: var(--bc, #0153f8);
+}
+
+::-webkit-scrollbar-corner {
+    background-color: transparent
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 5px
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Poppins-Bold";
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+li,
+figure,
+fieldset {
+    margin: 0;
+    padding: 0;
 }
 
 input::placeholder,
@@ -17,47 +66,42 @@ textarea::placeholder {
     color: #0006;
 }
 
-input:focus::-webkit-input-placeholder,
-input:focus::-moz-input-placeholder,
-input:hover::-webkit-input-placeholder,
-input:hover::-moz-input-placeholder,
-textarea:focus::-webkit-input-placeholder,
-textarea:focus::-moz-input-placeholder,
-textarea:hover::-webkit-input-placeholder,
-textarea:hover::-moz-input-placeholder {
-    color: #0006;
-}
-
-select:focus,
-textarea:focus,
-input:focus,
-button {
-    outline: none
-}
-
+input,
+select,
 textarea,
+button {
+    outline: none;
+    box-shadow: none;
+}
+
 input,
-select {
-    text-indent: 0.1rem;
+select,
+textarea {
+
+    &:focus,
+    &:focus-visible,
+    &:hover {
+        outline: none;
+        box-shadow: none;
+        background-color: inherit;
+        text-transform: none;
+    }
 }
 
 input,
 button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
     appearance: none;
     border-radius: 0;
-}
-
-button {
-    cursor: pointer;
 }
 
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-    -webkit-appearance: button;
     appearance: button;
+    cursor: pointer;
+}
+
+button {
     cursor: pointer;
 }
 
@@ -65,62 +109,35 @@ input,
 button,
 textarea,
 select {
-    border: 0;
+    font: inherit;
+    border: none;
+    outline: none;
+    box-shadow: none;
     font-family: inherit;
     font-style: inherit;
     font-size: inherit;
     font-weight: normal;
     color: inherit;
+    appearance: none;
+    border-radius: 0;
     background: var(--f);
 }
 
 p {
-    color: var(--1);
+    color: inherit;
 }
 
 ul,
 ol,
 li {
-    padding: 0;
     list-style-type: none;
-    vertical-align: middle
 }
 
 a {
     text-decoration: none;
     color: inherit;
-}
-
-a:focus,
-a:focus-visible {
     outline: none;
-}
-
-a:focus-visible:not(:focus),
-a:active:focus,
-a:active:focus-visible,
-a:active:focus-visible:not(:focus) {
-    outline: none;
-}
-
-a:not(.disabled):hover {
-    color: var(--bc);
-    border-color: var(--bc);
-    text-decoration: none;
-    cursor: pointer
-}
-
-a[href] {
-    cursor: pointer
-}
-
-span,
-div,
-p {
-    font-weight: inherit;
-    font-size: inherit;
-    font-style: inherit;
-    line-height: inherit;
+    cursor: pointer;
 }
 
 img,
@@ -133,25 +150,12 @@ video {
     vertical-align: middle
 }
 
-img[src=""],
-img:not([src]) {
-    opacity: 0
+fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
-b {
-    font-size: inherit;
-    color: inherit;
-    font-family: inherit;
-}
-
-font {
-    font-size: inherit;
-    font-weight: inherit;
-    color: inherit;
-    font-family: inherit;
-    font-style: inherit;
-    text-transform: inherit;
-}
 
 svg {
     width: 0.2rem;
@@ -185,8 +189,11 @@ textarea {
 }
 
 body {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    font-size: 0.16rem;
+    line-height: 1.6;
+    color: var(--1);
     background-color: var(--f);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .container {
@@ -196,7 +203,7 @@ body {
     width: 100%;
 
     @media screen and (max-width:1440px) {
-        max-width: 10rem;
+        max-width: 12rem;
     }
 }
 
@@ -232,7 +239,7 @@ body {
     display: grid;
 }
 
-.g-1-1 {
+.g-one>* {
     grid-area: 1 / 1;
 }
 
@@ -280,9 +287,17 @@ body {
     align-items: baseline;
 }
 
+.relative {
+    position: relative;
+}
+
+.o-hidden {
+    overflow: hidden;
+}
+
 .initialization__page [data-rolling] {
     overflow: hidden;
-    width: 200%;
+    width: min-content;
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
