--- a/src/scss/common/_tool.scss
+++ b/src/scss/common/_tool.scss
@@ -9,39 +9,49 @@ $breakpoints: (
     lg: 1024px,
     md: 768px,
 );
-$divisors: (
-    xl: 14.4,
-    lg: 10.24,
-    md: 7.68,
-);
 
 // 设置 html 根字体大小，响应式
 html {
     scroll-behavior: smooth;
-    font-size: calc(100vw / #{$divisor-default});
+    font-size: calc(100vw / 19.2)
 }
 
-@each $name, $breakpoint in $breakpoints {
-    $divisor: map.get($divisors, $name);
+@media (max-width: 1440px) {
+    html {
+        font-size: calc(100vw / 14.4)
+    }
+}
 
-    @if $divisor !=null {
-        @media (max-width: $breakpoint) {
-            html {
-                font-size: calc(100vw / #{$divisor});
-            }
-        }
+@media (max-width: 1024px) {
+    html {
+        font-size: calc(100vw / 10.24)
+    }
+}
+
+@media (max-width: 768px) {
+    html {
+        font-size: calc(100vw / 7.68)
+    }
+}
+
+@media (max-width: 480px) {
+    html {
+        font-size: calc(100vw / 4.8)
     }
 }
 
 // 字体工具
-@each $name, $size in (80: 0.8rem,
-    48: 0.48rem,
-    24: 0.24rem,
-    20: 0.2rem,
-    18: 0.18rem,
-    16: 0.16rem,
+@each $name, $size in (12: 0.12rem,
     14: 0.14rem,
-    12: 0.12rem) {
+    16: 0.16rem,
+    18: 0.18rem,
+    20: 0.2rem,
+    24: 0.24rem,
+    28: 0.28rem,
+    32: 0.32rem,
+    48: 0.48rem,
+    56: 0.56rem,
+    80: 0.8rem) {
     .f-#{$name} {
         font-size: $size;
     }
@@ -62,7 +72,10 @@ $spacing-steps: (
     15,
     20,
     30,
+    40,
     60,
+    80,
+    100,
     120
 );
 
@@ -109,7 +122,8 @@ $spacing-steps: (
 }
 
 // 间距工具
-@each $name, $gap in (30: .3rem,
+@each $name, $gap in (60: .6rem,
+    30: .3rem,
     20: .2rem,
     10: .1rem) {
     .g-#{$name} {
@@ -148,7 +162,8 @@ $opacities: (
 
 // 圆角工具
 $radiuses: (
-    8: 0.08rem
+    8: 0.08rem,
+    10:0.1rem
 );
 
 @each $num, $radius in $radiuses {
@@ -174,4 +189,27 @@ $radiuses: (
     -webkit-line-clamp: $lines;
     line-clamp: $lines;
     overflow: hidden;
+}
+
+// 列数工具
+@mixin grid-columns($cols) {
+    grid-template-columns: repeat($cols, 1fr);
+}
+
+// 默认列数类
+@for $i from 1 through 6 {
+    .grid-#{$i} {
+        @include grid-columns($i);
+    }
+}
+
+// 响应式列数类
+@each $bp, $size in $breakpoints {
+    @for $i from 1 through 6 {
+        @media screen and (min-width: $size) {
+            .#{$bp}\:grid-#{$i} {
+                @include grid-columns($i);
+            }
+        }
+    }
 }
