--- a/src/scss/layout/_nheader.scss
+++ b/src/scss/layout/_nheader.scss
@@ -4,8 +4,9 @@
 .p_header {
     border-bottom: 0.01rem solid var(--d);
     position: relative;
+    overflow: hidden;
 
-    .c_h1 h1{
+    .c_h1 h1 {
         line-height: 1.2;
     }
 
@@ -15,9 +16,123 @@
         top: 0;
         bottom: 0;
         pointer-events: none;
+        display: none;
 
-        img{
+        img {
             object-position: right top;
+        }
+    }
+
+    .r_ring {
+        --r1: 9rem;
+        width: var(--r1);
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        pointer-events: none;
+        z-index: -1;
+
+        .r1 {
+            position: absolute;
+            --r: 12rem;
+            width: var(--r);
+            height: var(--r);
+            top: -8.5rem;
+            right: -2.5rem;
+            background: linear-gradient(300deg, #ffffff, rgba(21, 73, 147, 0.1));
+            border-radius: 100%;
+
+            @media screen and (max-width: 1440px) {
+                --r: 11rem;
+                top: -8rem;
+            }
+
+            @media screen and (max-width: 1024px) {
+                --r: 10rem;
+                top: -7.3rem;
+            }
+
+            @media screen and (max-width: 768px) {
+                --r: 8rem;
+                top: -5.5rem;
+                right: -1.8rem;
+            }
+
+            @media screen and (max-width: 480px) {
+                --r: 6rem;
+                top: -4.2rem;
+                right: -1.1rem;
+            }
+        }
+
+        .r1::after {
+            content: '';
+            display: flex;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(0deg, #eaeff5, rgba(21, 73, 147, 0.2));
+            border-radius: 100%;
+            -webkit-mask: radial-gradient(farthest-side, transparent calc(100% - 0.012rem), black 0);
+            mask: radial-gradient(farthest-side, #00000000 calc(100% - 0.012rem), #000000 0);
+            animation: rotateBorder 10s linear infinite;
+        }
+
+        .r2 {
+            position: absolute;
+            --r: 7.8rem;
+            width: var(--r);
+            height: var(--r);
+            top: -6.3rem;
+            left: -0.3rem;
+            background: linear-gradient(200deg, rgba(255, 255, 255, 0.1), rgba(21, 73, 147, 0.06));
+            border-radius: 100%;
+
+            @media screen and (max-width: 1440px) {
+                --r: 6.8rem;
+                top: -5.3rem;
+                left: 0.8rem;
+            }
+
+            @media screen and (max-width: 1024px) {
+                --r: 6rem;
+                left: 2rem;
+                top: -4.6rem;
+            }
+
+            @media screen and (max-width: 768px) {
+                --r: 5rem;
+                left: 3.2rem;
+                top: -3.7rem;
+            }
+
+            @media screen and (max-width: 480px) {
+                --r: 4rem;
+                left: 4rem;
+                top: -3.2rem;
+            }
+        }
+
+        .r2::after {
+            content: '';
+            display: flex;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(100deg, #eaeff5, rgba(21, 73, 147, 0.2));
+            border-radius: 100%;
+            -webkit-mask: radial-gradient(farthest-side, transparent calc(100% - 0.014rem), black 0);
+            mask: radial-gradient(farthest-side, #00000000 calc(100% - 0.014rem), #000000 0);
+            animation: rotateBorder 5s linear infinite;
+        }
+    }
+
+    @keyframes rotateBorder {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
         }
     }
 }
