--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,4 @@
 @use 'core/_var';
 @use 'common/common';
-@use 'layout/nheader';
-@use 'layout/case';
-@use 'element/pagenation';
-
-@use 'layout/contact';
-
-header{
-    height: 30px;
-}
+@use 'element/element';
+@use 'layout/layout';
