--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,3 +1,79 @@
-<footer>
-    11321321
+<footer class="pt-80 pl-60 pr-60">
+    <div class="footer_logo mb-60">
+        <a href="/"><img src="src/images/img-19.png" alt="logo"></a>
+    </div>
+    <div class="footer_menu">
+        <div class="footer_menu_item footer_menu_item1">
+            <p class="footer_menu_t">Newsletter</p>
+            <p class="footer_menu_l">Get to know our latest news and activities
+            </p>
+            <form action="/search/" class="searchBox search">
+                <div class="form_input">
+                    <div class="e_input-5 form-group">
+                        <div class="p_group">
+                            <div class="input-group">
+                                <input type="text" class="p_input f-14"
+                                    name="keyword" data-name="e_input-1"
+                                    placeholder="E-mail*" autocomplete="off">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="formBtn" type="submit">
+                    <img src="src/svg/i-5.svg" alt="search">
+                </button>
+            </form>
+        </div>
+        <div class="footer_menu_item footer_menu_item1">
+            <p class="footer_menu_t"><a href="javascript:;">Technology</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Precision
+                    manufacturing and processing</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Special arts and
+                    crafts</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Material</a></p>
+        </div>
+        <div class="footer_menu_item footer_menu_item1">
+            <p class="footer_menu_t"><a href="javascript:;">Case</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">EADS</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Medical
+                    treatment</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Ocean</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Other</a></p>
+        </div>
+        <div class="footer_menu_item footer_menu_item1">
+            <p class="footer_menu_t"><a href="javascript:;">Service and
+                    support</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Our services</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">FAQ</a></p>
+        </div>
+        <div class="footer_menu_item footer_menu_item1">
+            <p class="footer_menu_t"><a href="javascript:;">About us</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">About us</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">News</a></p>
+        </div>
+        <div class="footer_menu_item footer_menu_item1">
+            <p class="footer_menu_t"><a href="javascript:;">Contact us</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Address placeholder
+                    Address placeholder</a></p>
+            <p class="footer_menu_l"><a href="javascript:;">Address
+                    placeholder</a></p>
+            <p class="footer_menu_l"><a
+                    href="tel:0000-000-00000">0000-000-00000</a></p>
+            <p class="footer_menu_l"><a
+                    href="mailto:;00000000@163.com">00000000@163.com</a></p>
+            <a href="javascript:;" class="btn btn-bc mt-30">Contact</a>
+        </div>
+    </div>
+    <div class="footer_other mt-60">
+        <p class="copy f-14">©2024 WELLTECH @by GrowthMan</p>
+        <p class="f_other_page flex a-center g-10">
+            <a class="f-14" href="javascript:;">Cookies Policy</a>
+            <span class="f-12">|</span> <a class="f-14"
+                href="javascript:;">Privacy Policy</a>
+            <span class="f-12">|</span> <a class="f-14"
+                href="javascript:;">Disclaimers</a>
+            <span class="f-12">|</span> <a class="f-14"
+                href="javascript:;">Website Map</a>
+        </p>
+    </div>
 </footer>
